- auction quantity, tuningy

--- a/app/components/Account/Profile/ChangePassword/changePasswordView.html
+++ b/app/components/Account/Profile/ChangePassword/changePasswordView.html
@@ -1,7 +1,7 @@
 <m param="{route}">
   <div class="change-password-page" ng-open="formLabels('changePasswordForm')">
         <h1>{{'texts.change_password' | i18next}}</h1>
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-lg-offset-3">
         <form name="changePasswordForm" novalidate>
           <div class="form-group has-feedback has-feedback-left">
             <input id="currentPass" type="password" name="currentPass" class="form-control my-input" placeholder="{{'texts.actual_password' | i18next}}" ng-model="account.currentPass" />
@@ -16,7 +16,7 @@
             <i class="glyphicon glyphicon-lock form-control-feedback"></i>
           </div>
           <div class="form-group text-center">
-            <div class="my-button big-button normal-button" ng-click="changePassword()">{{'texts.change' | i18next}}</div>
+            <div class="my-button big-button normal-button" ng-click="changePassword()">{{'texts.change_password2' | i18next}}</div>
           </div>
         </form>
     </div>
