--- a/app/components/Auction/Detail/detailAuction.html
+++ b/app/components/Auction/Detail/detailAuction.html
@@ -120,21 +120,30 @@
                     <span class="normal-icon glyphicon glyphicon-tag"></span>
                     <span>{{'texts.auction.freight_type.label' | i18next}}:</span>
                 </div>
-                <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6"><span>{{getFreightType(item.freight.freight_type)}}</span></div>
+                <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6">
+                    <span>{{getFreightType(item.freight.freight_type)}}</span>
+                    <span ng-show="item.quantity > 1" class="note">x{{item.quantity}}</span>
+                </div>
             </div>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="detail-label col-xs-6 col-sm-6 col-md-7 col-lg-6">
                     <i class="normal-icon awes-icon fas fa-weight-hanging"></i>
                     <span>{{'texts.auction.freight_weight' | i18next}}:</span>
                 </div>
-                <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6"><span>{{item.freight.freight_weight}} kg</span></div>
+                <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6">
+                    <span>{{item.freight.freight_weight}} kg</span>
+                    <span ng-show="item.quantity > 1" class="note">x{{item.quantity}}</span>
+                </div>
             </div>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="detail-label col-xs-6 col-sm-6 col-md-7 col-lg-6">
                     <span class="normal-icon glyphicon glyphicon-resize-full"></span>
                     <span>{{'texts.auction.freight_size' | i18next}}:</span>
                 </div>
-                <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6"><span>{{item.freight.freight_size}}</span></div>
+                <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6">
+                    <span>{{item.freight.freight_size}}</span>
+                    <span ng-show="item.quantity > 1" class="note">x{{item.quantity}}</span>
+                </div>
             </div>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="detail-label col-xs-6 col-sm-6 col-md-7 col-lg-6">
@@ -179,7 +188,7 @@
                      ng-class="(item_history.id_user == user.ID ? 'my-history ': '') + 'history-list-item row'">
                     <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
                     <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                        {{$index + 1}}
+                        {{history.length - $index}}
                     </div>
                     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                         {{item_history.date}}
@@ -200,7 +209,7 @@
                      ng-class="(item_history.id_user == user.ID ? 'my-history ': '') + 'history-list-item row'">
                     <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
                     <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                        {{$index + 4}}
+                        {{history.length - $index - 3}}
                     </div>
                     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                         {{item_history.date}}
