--- a/app/components/Account/Profile/Notification/notificationView.html
+++ b/app/components/Account/Profile/Notification/notificationView.html
@@ -37,8 +37,8 @@
                                 </select>
                             </label>
                         </td>
-                        <td>
-                            <div ng-class="selectedCompany ? '' : 'disabled'" class="btn btn-xs normal-button" ng-click="addCompany()">{{'texts.notification.addButton' | i18next}}</div>
+                        <td class="action">
+                            <div ng-class="selectedCompany ? '' : 'disabled'" class="btn normal-button" ng-click="addCompany()">{{'texts.notification.addButton' | i18next}}</div>
                         </td>
                     </tr>
                     <tr></tr>
@@ -52,12 +52,12 @@
             </div>
             <div class="notification-item col-lg-6">
                 <h3>{{'texts.notification.platform' | i18next}}</h3>
-                <table class="info-block table">
+                <table class="info-block table table-borderless">
                     <tr>
                         <td>
                             {{'texts.notification.platformCreated' | i18next}}
                         </td>
-                        <td>
+                        <td class="action">
                             <select ng-model="platform" id="platform" ng-change="platformChange()">
                                 <option value="1">{{'texts.notification.platforms.email' | i18next}}</option>
                                 <option value="2">{{'texts.notification.platforms.sms' | i18next}}</option>
