--- a/css/form.css
+++ b/css/form.css
@@ -1,3 +1,17 @@
+.btn {
+    border-radius: 3px;
+}
+select {
+    border: 1px solid #e6e6f1;
+    padding: 6px 10px;
+    font-size: 15px;
+    color: #2c2d51;
+    background: white;
+    font-weight: normal;
+}
+label {
+    margin-bottom: 0;
+}
 .form-control-feedback{
  line-height: 40px;
 }
@@ -20,6 +34,7 @@
     padding-left: 20px;
     background: #e6e6f1;
     border-radius: 5px;
+    margin-bottom: 10px;
 }
 
 .datePickerVacation {
