--- a/app/components/Auction/Create/createAuctionView.html
+++ b/app/components/Auction/Create/createAuctionView.html
@@ -146,14 +146,14 @@
                 </div>
               </div>
               <div class="form-group half">
-                  <input type="number" name="quantity" min="1" autocomplete="disabled" id="quantity" class="form-control big-input my-input required text-right" placeholder="{{'texts.auction.quantity' | i18next}}" ng-model="auction.quantity"
+                  <input type="number" name="quantity" min="1" autocomplete="disabled" id="quantity" class="form-control my-input required text-right" placeholder="{{'texts.auction.quantity' | i18next}}" ng-model="auction.quantity"
                          ng-class="{'input-error' : createAuctionForm.quantity.$invalid && (!createAuctionForm.quantity.$pristine || clicked)}"
                          required />
               </div>
               <div class="form-group half">
 
                 <div class="has-feedback has-feedback-right">
-                  <input type="number" name="price" min="0" autocomplete="disabled" id="price" class="form-control big-input my-input required text-right" placeholder="{{'texts.auction.priceItem' | i18next}}" ng-model="auction.price"
+                  <input type="number" name="price" min="0" autocomplete="disabled" id="price" class="form-control my-input required text-right" placeholder="{{'texts.auction.priceItem' | i18next}}" ng-model="auction.price"
                          ng-class="{'input-error' : createAuctionForm.price.$invalid && (!createAuctionForm.price.$pristine || clicked)}"
                          required />
                   <span class="form-control-feedback">Kč</span>
@@ -211,6 +211,50 @@
   </div>
   <div class="modal-footer">
     <div class="my-button normal-button" ng-click="ok(template_name)">{{'texts.ok' | i18next}}</div>
+    <div class="my-button easy-button" ng-click="cancel()">{{'texts.cancel' | i18next}}</div>
+  </div>
+</script>
+
+<script type="text/ng-template" id="modal_ensure_create_auction" class="modal-content">
+  <div class="modal-header">
+    <h2>{{'texts.create_auction_dialog_title' | i18next}}</h2>
+  </div>
+
+  <div class="modal-body">
+    <div class="form-group no-margin-element">
+      <span class="dialog-main-text">{{'texts.create_auction_dialog_main_text' | i18next}}</span>
+      <div class="auction_summary">
+        <table>
+          <tr class="item">
+            <td class="title">{{'texts.create_auction_dialog_from' | i18next}}: </td>
+            <td class="value">{{full_adress_from.city}}</td>
+          </tr>
+          <tr class="item">
+            <td class="title">{{'texts.create_auction_dialog_to' | i18next}}: </td>
+            <td class="value">{{full_adress_to.city}}</td>
+          </tr>
+          <tr class="item">
+            <td class="title">{{'texts.create_auction_dialog_end_auction' | i18next}}: </td>
+            <td class="value">{{temporaryDate}}</td>
+          </tr>
+          <tr class="item">
+            <td class="title">{{'texts.create_auction_dialog_quantity' | i18next}}: </td>
+            <td class="value">{{auction.quantity}}</td>
+          </tr>
+          <tr class="item">
+            <td class="title">{{'texts.create_auction_dialog_item_price' | i18next}}: </td>
+            <td class="value">{{auction.price}},- Kč</td>
+          </tr>
+          <tr class="item">
+            <td class="title">{{'texts.create_auction_dialog_item_total_price' | i18next}}: </td>
+            <td class="value">{{auction.quantity * auction.price}},- Kč</td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <div class="my-button normal-button" ng-click="ok()">{{'texts.create_auction_dialog_ok' | i18next}}</div>
     <div class="my-button easy-button" ng-click="cancel()">{{'texts.cancel' | i18next}}</div>
   </div>
 </script>
