--- a/css/global.css
+++ b/css/global.css
@@ -174,6 +174,14 @@ p {
     padding-left: 0;
 }
 
+.desktop-only {
+    display: block;
+}
+
+.phone-only {
+    display: none;
+}
+
 @media (max-width: 991px) {
     /* MENU */
     .menu-tabs {
@@ -220,6 +228,15 @@ p {
         left: 0;
         width: 100%;
     }
+
+    .desktop-only {
+        display: none;
+    }
+
+    .phone-only {
+        display: block;
+    }
+
 }
 
 @media (max-width: 600px) {
