- design problemy na profilu

--- a/app/components/Account/Profile/MyAccount/userProfileView.html
+++ b/app/components/Account/Profile/MyAccount/userProfileView.html
@@ -2,7 +2,7 @@
   <div class="user-page">
       <h1>{{'texts.your_acc' | i18next}}</h1>
 
-    <div class="wrapper row">
+    <div class="wrapper">
       <div class="col-lg-6">
         <h3>{{'texts.credit' | i18next}}</h3>
         <table class="table table-borderless credit-info">
