--- a/app/components/Account/Profile/Notification/notificationView.html
+++ b/app/components/Account/Profile/Notification/notificationView.html
@@ -16,7 +16,7 @@
         <div class="info-block">
             <span class="glyphicon glyphicon-info-sign icon"></span> {{'texts.notification.info' | i18next}}
         </div>
-        <div class="wrapper row">
+        <div class="wrapper">
             <div class="notification-item col-lg-6">
                 <h3>{{'texts.notification.sender' | i18next}}</h3>
                 <table class="table table-striped">
