--- a/app/components/Account/Profile/MyAccount/userProfileView.html
+++ b/app/components/Account/Profile/MyAccount/userProfileView.html
@@ -14,6 +14,11 @@
             <th>{{userInfo.start_credit - userInfo.end_credit}}&nbsp;Kč</th>
           </tr>
           <tr>
+            <td colspan="2">
+              <hr class="light">
+            </td>
+          </tr>
+          <tr>
             <td>{{'texts.credit_reset' | i18next}}:</td>
             <td>{{userInfo.credit}},-&nbsp;Kč</td>
           </tr>
