- nástřel grafu příhozů v samostatném detailu Item: R-27

--- a/app/components/Auction/Detail/detailAuction.html
+++ b/app/components/Auction/Detail/detailAuction.html
@@ -178,6 +178,9 @@
             </span>
         </h3>
         <div ng-show="history.length > 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 history-table">
+            <div class="auction-charts">
+                <canvas id="credit-chart"></canvas>
+            </div>
             <div class="history-header row">
                 <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
                 <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">#</div>
