--- a/css/content.css
+++ b/css/content.css
@@ -497,6 +497,12 @@
     margin-right: 12px;
 }
 
+.auction-detail .auction-charts {
+    position: relative;
+    min-height: 160px;
+    margin: 25px 0;
+}
+
 .auction-detail.embed .history-table {
     background: #f8f8ff;
 }
