--- a/css/global.css
+++ b/css/global.css
@@ -58,6 +58,13 @@ p {
     padding-bottom: 27px;
 }
 
+.tooltip.top .tooltip-arrow {
+    border-top-color: #12133d;
+}
+.tooltip .tooltip-inner {
+    background-color: #12133d;
+}
+
 .no-padding-element {
     padding-left: 0!important;
     padding-right: 0!important;
