- history charts in detail directive Item: R-27

--- a/app/components/Auction/Detail/detailAuction.html
+++ b/app/components/Auction/Detail/detailAuction.html
@@ -177,10 +177,10 @@
                 <label ng-show="historyMore">{{'texts.show_less' | i18next}}</label>
             </span>
         </h3>
+        <div ng-show="history.length > 0" class="auction-charts">
+            <canvas id="credit-chart"></canvas>
+        </div>
         <div ng-show="history.length > 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 history-table">
-            <div class="auction-charts">
-                <canvas id="credit-chart"></canvas>
-            </div>
             <div class="history-header row">
                 <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
                 <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">#</div>
@@ -249,3 +249,4 @@
         <div class="my-button easy-button" ng-click="cancel()">{{'texts.cancel' | i18next}}</div>
     </div>
 </script>
+{{afterRender()}}
