--- a/app/components/Account/Profile/Notification/notificationView.html
+++ b/app/components/Account/Profile/Notification/notificationView.html
@@ -25,7 +25,7 @@
                             {{company}}
                         </td>
                         <td class="action">
-                            <span tooltip="{{'texts.tooltips.remove_company_notification_list' | i18next}}"
+                            <span title="{{'texts.tooltips.remove_company_notification_list' | i18next}}"
                                   class="glyphicon glyphicon-remove red btn" ng-click="removeCompany(company)">
                             </span>
                         </td>
