- grafy ve financích

--- a/css/content.css
+++ b/css/content.css
@@ -820,7 +820,7 @@
 }
 
 .user-page .credit-info {
-    margin-bottom: 30px;
+    margin-top: 40px;
 }
 .user-page .charts {
     position: relative;
