--- a/app/components/Account/Profile/Finances/financesView.html
+++ b/app/components/Account/Profile/Finances/financesView.html
@@ -1,14 +1,11 @@
 <m param="{route}">
   <div class="user-page">
       <h1>{{'texts.finances' | i18next}}</h1>
-
     <div ng-if="userInfo.start_credit > 0" class="wrapper">
       <div class="col-lg-6">
         <div class="charts">
           <canvas id="credit-chart"></canvas>
         </div>
-      </div>
-      <div class="col-lg-6">
         <table class="table table-borderless credit-info">
           <tr>
             <th>{{'texts.credit_all' | i18next}}:</th>
@@ -28,6 +25,11 @@
             <td><b>{{sharePercent}}</b> ({{userInfo.share}} Kč)</td>
           </tr>
         </table>
+      </div>
+      <div class="col-lg-6">
+        <div class="charts">
+          <canvas id="history-chart"></canvas>
+        </div>
       </div>
     </div>
     <div ng-if="userInfo.start_credit == 0" class="wrapper">
