- sazba nebude spocitana

--- a/app/components/Account/Profile/Finances/financesView.html
+++ b/app/components/Account/Profile/Finances/financesView.html
@@ -22,7 +22,7 @@
           </tr>
           <tr>
             <td>{{'texts.share' | i18next}}:</td>
-            <td><b>{{sharePercent}}</b> ({{userInfo.share}} Kč)</td>
+            <td><b>{{sharePercent}}</b></td>
           </tr>
         </table>
       </div>
